--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background-color: #242424;
+    overflow-y: hidden;
+    background: #242424;
 }
 
 .container {
