--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    overflow-y: hidden;
     background: #242424;
 }
 
@@ -11,6 +10,6 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     flex-direction: row;
 }
