--- a/src/glass.css
+++ b/src/glass.css
@@ -1,35 +1,40 @@
 .glass {
-    width: 200px;
-    height: 250px;
-    background: rgba(100,106,107,0.4);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
-    border: 1px solid rgba(100,106,107,0.2);
+  width: 200px;
+  height: 250px;
+  background: rgba(100, 106, 107, 0.4);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  border: 1px solid rgba(100, 106, 107, 0.2);
 }
 
 .glass:hover {
-    transition: transform 0.5s ease;
-    box-shadow: 0 3px 4px rgba(255, 255, 255, 0.3);
+  transition: transform 0.5s ease;
+  box-shadow: 0 3px 4px rgba(255, 255, 255, 0.3);
 }
 
 .glass.disabled-hover {
-    pointer-events: none;
+  pointer-events: none;
 }
 
 .glassOrb {
-    width: 150px;
-    height: 150px;
-    background: rgba(200,215,220,0.2);
-    -webkit-backdrop-filter: blur(3px);
-    backdrop-filter: blur(3px);
-    border: 1px solid rgba(200,215,220,0.1);
+  width: 200px;
+  height: 200px;
+  background: rgba(200, 215, 220, 0.2);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  border: 1px solid rgba(200, 215, 220, 0.1);
 }
 
 .glassOrb:hover {
-    transition: transform 0.5s ease;
-    box-shadow: 0 3px 4px rgba(255, 255, 255, 0.3);
+  transition: transform 1.5s ease;
+  box-shadow: 0 3px 4px rgba(255, 255, 255, 0.3);
+}
+
+.glassOrbText {
+  text-align: center;
+  opacity: 1;
 }
 
 .glassOrb.disabled-hover {
-    pointer-events: none;
+  pointer-events: none;
 }
