--- a/src/glass.css
+++ b/src/glass.css
@@ -30,6 +30,20 @@
   box-shadow: 0 3px 4px rgba(255, 255, 255, 0.3);
 }
 
+.glassOrb2 {
+  width: 170px;
+  height: 170px;
+  background: rgba(200, 215, 220, 0.2);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  border: 1px solid rgba(200, 215, 220, 0.1);
+}
+
+.glassOrb2:hover {
+  transition: transform 1.5s ease;
+  box-shadow: 0 3px 4px rgba(255, 255, 255, 0.3);
+}
+
 .glassOrbText {
   text-align: center;
   opacity: 1;
