--- a/src/glass.css
+++ b/src/glass.css
@@ -1,10 +1,11 @@
 .glass {
   width: 200px;
   height: 250px;
-  background: rgba(100, 106, 107, 0.4);
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
-  border: 1px solid rgba(100, 106, 107, 0.2);
+  backdrop-filter: blur(1px) saturate(180%);
+    -webkit-backdrop-filter: blur(1px) saturate(180%);
+    background-color: rgba(216, 209, 216, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 .glass:hover {
@@ -19,10 +20,11 @@
 .glassOrb {
   width: 200px;
   height: 200px;
-  background: rgba(200, 215, 220, 0.2);
-  -webkit-backdrop-filter: blur(3px);
-  backdrop-filter: blur(3px);
-  border: 1px solid rgba(200, 215, 220, 0.1);
+  backdrop-filter: blur(1px) saturate(180%);
+    -webkit-backdrop-filter: blur(1px) saturate(180%);
+    background-color: rgba(216, 209, 216, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 .glassOrb:hover {
@@ -34,10 +36,11 @@
 .glassOrb2 {
   width: 170px;
   height: 170px;
-  background: rgba(200, 215, 220, 0.2);
-  -webkit-backdrop-filter: blur(3px);
-  backdrop-filter: blur(3px);
-  border: 1px solid rgba(200, 215, 220, 0.1);
+  backdrop-filter: blur(1px) saturate(180%);
+    -webkit-backdrop-filter: blur(1px) saturate(180%);
+    background-color: rgba(216, 209, 216, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 .glassOrb2:hover {
