--- a/src/cssAnimations/rectangleHover.css
+++ b/src/cssAnimations/rectangleHover.css
@@ -1,12 +1,12 @@
 .rectangleContainer {
   height: 200px;
   border: 3px solid white;
-  background: transparent;
-  transition: opacity 0.3 ease;
+  background: #242424;
   cursor: default;
-  opacity: 0.6;
+  opacity: 1;
+  transition: opacity 0.5s ease;
 }
 
 .rectangleContainer:hover {
-  opacity: 1;
+  opacity: 0.5;
 }
