--- a/src/cssAnimations/textScroll.css
+++ b/src/cssAnimations/textScroll.css
@@ -33,8 +33,8 @@
 .marquee2 p {
   font-family: "Archivo Black", sans-serif;
   display: inline-block;
-  color: transparent; /* Couleur du texte transparente */
-  -webkit-text-stroke: 4px white /* Bordure de texte grise de 2px */
+  color: transparent;
+  -webkit-text-stroke: 4px white
 }
 
 @keyframes marquee2 {
@@ -45,4 +45,8 @@
   100% {
     transform: translate3d(0%, 0, 0);
   }
+}
+
+.textBorder {
+  -webkit-text-stroke: 4px white
 }
