--- a/src/cssAnimations/buttonAnimation.css
+++ b/src/cssAnimations/buttonAnimation.css
@@ -24,3 +24,25 @@
   color: #242424;
   border: none;
 }
+
+.experiencesButton {
+  font-family: Roboto, sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  color: white;
+  background-color: transparent;
+  padding: 10px 30px;
+  border: none;
+  box-shadow: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+  transition: 297ms;
+  opacity: 0.7;
+}
+
+.experiencesButton:hover {
+  transition: 297ms;
+  opacity: 1;
+}
